--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,18 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  webview_flutter: ^2.0.3
-  google_fonts: ^2.0.0
+  webview_flutter: ^3.0.4
+  google_fonts: ^3.0.1
   http: ^0.13.3
-  provider: ^5.0.0
+  provider: ^6.0.3
   intl: ^0.17.0
   android_alarm_manager_plus: ^2.0.2
-  flutter_local_notifications: ^5.0.0+3
-  rxdart: ^0.26.0
+  flutter_local_notifications: ^9.7.0
+  rxdart: ^0.27.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
